{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 17,
  "lineage": "3eb3ab89-b507-bb8b-fd1e-760fef6750c8",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-23T01:07:21.739-08:00",
            "deny": [],
            "description": "HTTP/HTTPS 접근 허용 (웹 서비스용)",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/api-prod-biocom/global/firewalls/biocom-bo-cluster-prod-allow-http-https",
            "log_config": [],
            "name": "biocom-bo-cluster-prod-allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/api-prod-biocom/global/networks/biocom-bo-cluster-prod-vpc",
            "priority": 1000,
            "project": "api-prod-biocom",
            "self_link": "https://www.googleapis.com/compute/v1/projects/api-prod-biocom/global/firewalls/biocom-bo-cluster-prod-allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server",
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-12-23T01:07:21.780-08:00",
            "deny": [],
            "description": "VPC 내부 통신 허용",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/api-prod-biocom/global/firewalls/biocom-bo-cluster-prod-allow-internal",
            "log_config": [],
            "name": "biocom-bo-cluster-prod-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/api-prod-biocom/global/networks/biocom-bo-cluster-prod-vpc",
            "priority": 1000,
            "project": "api-prod-biocom",
            "self_link": "https://www.googleapis.com/compute/v1/projects/api-prod-biocom/global/firewalls/biocom-bo-cluster-prod-allow-internal",
            "source_ranges": [
              "10.20.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-23T01:07:21.772-08:00",
            "deny": [],
            "description": "SSH 접근 허용 (관리용)",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/api-prod-biocom/global/firewalls/biocom-bo-cluster-prod-allow-ssh",
            "log_config": [],
            "name": "biocom-bo-cluster-prod-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/api-prod-biocom/global/networks/biocom-bo-cluster-prod-vpc",
            "priority": 1000,
            "project": "api-prod-biocom",
            "self_link": "https://www.googleapis.com/compute/v1/projects/api-prod-biocom/global/firewalls/biocom-bo-cluster-prod-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh-allowed"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "ingress_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.49.124.240",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-12-23T01:06:03.639-08:00",
            "description": "BIOCOM BO-API Ingress 외부 IP",
            "id": "projects/api-prod-biocom/global/addresses/biocom-bo-cluster-prod-external-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "biocom-bo-cluster-prod-external-ip",
            "prefix_length": 0,
            "project": "api-prod-biocom",
            "self_link": "https://www.googleapis.com/compute/v1/projects/api-prod-biocom/global/addresses/biocom-bo-cluster-prod-external-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "BIOCOM BO-API 메인 VPC - prod 환경",
            "enable_ula_internal_ipv6": false,
            "id": "projects/api-prod-biocom/global/networks/biocom-bo-cluster-prod-vpc",
            "mtu": 0,
            "name": "biocom-bo-cluster-prod-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "2347941856532751699",
            "project": "api-prod-biocom",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/api-prod-biocom/global/networks/biocom-bo-cluster-prod-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-23T01:07:22.146-08:00",
            "description": "BIOCOM BO-API Cloud Router - NAT Gateway용",
            "encrypted_interconnect_router": false,
            "id": "projects/api-prod-biocom/regions/asia-northeast3/routers/biocom-bo-cluster-prod-router",
            "name": "biocom-bo-cluster-prod-router",
            "network": "https://www.googleapis.com/compute/v1/projects/api-prod-biocom/global/networks/biocom-bo-cluster-prod-vpc",
            "project": "api-prod-biocom",
            "region": "asia-northeast3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/api-prod-biocom/regions/asia-northeast3/routers/biocom-bo-cluster-prod-router"
          },
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "api-prod-biocom/asia-northeast3/biocom-bo-cluster-prod-router/biocom-bo-cluster-prod-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "biocom-bo-cluster-prod-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "api-prod-biocom",
            "region": "asia-northeast3",
            "router": "biocom-bo-cluster-prod-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.main",
            "google_compute_router.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-23T01:07:22.740-08:00",
            "description": "BIOCOM BO-API 메인 서브넷 - prod 환경",
            "gateway_address": "10.20.1.1",
            "id": "projects/api-prod-biocom/regions/asia-northeast3/subnetworks/biocom-bo-cluster-prod-subnet",
            "ip_cidr_range": "10.20.1.0/24",
            "name": "biocom-bo-cluster-prod-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/api-prod-biocom/global/networks/biocom-bo-cluster-prod-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "api-prod-biocom",
            "purpose": "PRIVATE",
            "region": "asia-northeast3",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.21.0.0/16",
                "range_name": "pods"
              },
              {
                "ip_cidr_range": "10.22.0.0/16",
                "range_name": "services"
              },
              {
                "ip_cidr_range": "10.68.0.0/14",
                "range_name": "gke-biocom-bo-cluster-prod-pods-de3f76b9"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/api-prod-biocom/regions/asia-northeast3/subnetworks/biocom-bo-cluster-prod-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    }
  ]
}